fix(cropper): fix layout clipping by providing explicit box-sized height in crop modal stylesheet

--- a/src/app/image-uploader/crop-modal/crop-modal.component.scss
+++ b/src/app/image-uploader/crop-modal/crop-modal.component.scss
@@ -50,28 +50,22 @@
 }
 
 .dialog-body {
-  padding: 24px;
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+  padding: 16px;
   background: var(--color-bg);
-  min-height: 300px;
-  max-height: 50vh;
+  height: 420px;
+  box-sizing: border-box;
+  position: relative;
 
   .cropper-wrapper {
     width: 100%;
     height: 100%;
-    max-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    overflow: hidden;
 
     img {
+      display: block;
       max-width: 100%;
       max-height: 100%;
-      display: block;
     }
   }
 }
@@ -183,13 +177,17 @@
 }
 
 .cropper-loading-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 300px;
   background: var(--color-bg);
-  padding: 48px;
 
   .spinner {
     width: 36px;
